# DeZeroCxx

./: .clang-format  CMakeLists.txt  Dockerfile  LICENSE  README.md
dezero/: core.cpp  core.h  core_simple.cpp  core_simple.h  dezero.h  functions.cpp  functions.h  utils.h
steps/: CMakeLists.txt  step01.cpp  step02.cpp  step03.cpp  step04.cpp  step06.cpp  step07.cpp  step08.cpp  step09.cpp  step09.h  test.cpp
tests/: CMakeLists.txt  test_square.cpp
